# firelight

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  Main.qml  README.md  README.txt  achievements.json  android-toolchain.cmake  android.sh  app-directory-structure.md  app_resources.rc  build-windows-testing.sh  build-windows.sh  conanfile.txt  cpack_portable.cmake  dbtesting.sql  faq.md  gambatte_options.txt  gamecontrollerdb.txt  notes.md  notes.txt  qtquickcontrols2.conf  resources.qrc  vcpkg.json
.github/workflows/: build-linux-x86.yml  build-win64-x86.yml  c-cpp.yml  cmake-single-platform.yml
build-old/: CMakeCache.txt
cmake/: clang-checks.cmake  rcheevos.cmake
docs/.obsidian/: workspace.json
docs/Firelight/: Audio Rate.md  Controllers.md  Notes.md  ROM Hacks.md  Settings.md  Untitled.canvas  mappingsdb.txt  mappingsnodb.txt
docs/design/: platforms.md
docs/libretro/: core_retropad_bindings.md
docs/patching/: bps_file_format.md  ips_file_format.md
include/discord/: types.h
include/firelight/: achievement.hpp  content_database.hpp  controller_profile.hpp  game.hpp  input_mapping.hpp  library_content_directory.hpp  library_database.hpp  library_entry.hpp  platform.hpp  play_session.hpp  playlist.hpp  playlist_entry.hpp  product.hpp  rom.hpp  romhack.hpp  romhack_release.hpp  savefile_metadata.hpp  suspend_point_metadata.hpp  userdata_database.hpp
include/libretro/: libretro.h  libretro_vulkan.h
include/rcheevos/: module.modulemap  rc_api_editor.h  rc_api_info.h  rc_api_request.h  rc_api_runtime.h  rc_api_user.h  rc_client.h  rc_client_raintegration.h  rc_consoles.h  rc_error.h  rc_export.h  rc_hash.h  rc_libretro.h  rc_runtime.h  rc_runtime_types.h  rc_url.h  rc_util.h  rcheevos.h
include/tracy/: Tracy.hpp
includes/GLfont/: FontAtlas.cpp  FontAtlas.h
includes/SDL2/: SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_scancode.h
includes/imgui/: imgui.h
includes/openssl/: asn1.h  bio.h  conf.h  configuration.h  crypto.h  opensslv.h  pkcs12.h  pkcs7.h  ssl.h  x509.h  x509v3.h
lib/: libcrypto.lib
libs/discord/: CMakeLists.txt
libs/discord/src/: achievement_manager.cpp  activity_manager.cpp  core.cpp  image_manager.cpp  lobby_manager.cpp  network_manager.cpp  overlay_manager.cpp  overlay_manager.h  relationship_manager.cpp  storage_manager.cpp  store_manager.cpp  types.cpp  voice_manager.cpp
qml/: ActiveFocusHighlight.qml  AppStyle.qml  AppearanceSettings.qml  CarouselText.qml  ColorPalette.qml  Constants.qml  DebugPage.qml  EmulatorPage.qml  FirelightCreatePlaylistDialog.qml  FirelightDialog.qml  FirelightMenuItem.qml  FirelightRenamePlaylistDialog.qml  FirelightRightClickMenu.qml  FirelightRightClickMenuItem.qml  FirelightSplitViewHandle.qml  Footer.qml  GeneralSettings.qml  Header.qml  LibraryPage.qml  LibraryPage.qml.bak  Main.qml  Main.qml.bak  Main2.qml  Main3.qml  Main4.qml  Main5.qml  MainMenu.qml  NavMenuButton.qml  NavigationRail.qml  NewRouter.qml  Notification.qml  NowPlayingPage.qml  RewindMenu.qml  SettingsItem.qml  SettingsPage.qml  SettingsPage.qml.bak
qml/achievements/: AchievementList.qml  AchievementListItem.qml  AchievementProgressIndicator.qml  AchievementUnlockIndicator.qml  ChallengeIndicatorList.qml  RetroAchievementsAccountPane.qml
qml/common/: AchievementProgressIndicator.qml  AchievementUnlockIndicator.qml  CarouselText.qml  ChallengeIndicator.qml  ChallengeIndicatorList.qml  ComboBoxOption.qml  ComboBoxOption2.qml  ContentPane.qml  DetailsButton.qml  DirectoryOption.qml  FileOption.qml  FirelightButton.qml  GameLaunchPopup.qml  ImageViewer.qml  LibraryEntryComboBox.qml  ListViewSectionDelegate.qml  MyComboBox.qml  MySlider.qml  NavigationTabBar.qml  Option.qml  OptionGroup.qml  RadioButtonGroup.qml  RightClickMenu.qml  RightClickMenuItem.qml  RightClickMenuSeparator.qml  SelectLibraryEntryDialog.qml  SliderOption.qml  ToggleOption.qml
qml/components/: AchievementSetView.qml  FLBreadcrumbs.qml  FLDateTime.qml  FLEmulationPlayer.qml  FLFocusHighlight.qml  FLGameActivityPage.qml  FLGameDetailsPanel.qml  FLIcon.qml  FLInputGuideBar.qml  FLModShopItemPanel.qml  FLNavItem.qml  FLNavSection.qml  FLSoundEffect.qml  FLSuspendPointCard.qml  FLThing.qml  FLToolTip.qml  FLTwoColumnMenu.qml  FLUserBackground.qml  FirelightDialog.qml  GameSettings2.qml  GameSettingsView.qml  IconButton.qml  MainContent.qml  QuickMenu.qml  RadioIconButton.qml  SettingValue.qml
qml/controllers/: ControllerProfilePage.qml  ControllerTest.qml  ControllersPage.qml  ControllersPage.qml.bak  KeyboardProfilePage.qml
qml/discover/: AddedPopup.qml  DiscoverPage.qml  HackPage.qml  HackPage2.qml  StoreContent.qml
qml/home/: HomeContentPane.qml
qml/mainmenu/: MainMenuNavButton.qml
qml/pages/: ControllersPage.qml  DashboardTesting.qml  DiscoverPage.qml  EmulatorPage.qml  GameDetailsPage.qml  LibraryPage.qml  LibraryPage2.qml  NewEmulatorPage.qml  NowPlayingPage.qml  ShopItemPage.qml  ShopLandingPage.qml  StoreContent.qml
qml/screens/: EmulatorScreen.qml  HomeScreen.qml  NewUserScreen.qml  SettingsScreen.qml
qml/settings/: About.qml  AboutPage.qml  AppearanceSettings.qml  AppearanceSettingsPage.qml  ControllerSettings.qml  DirectorySettings.qml  LibrarySettings.qml  NotificationSettings.qml  RetroAchievementSettings.qml  SoundSettings.qml  SystemSettings.qml  VideoSettings.qml
qml/shop/: ShopGridItemDelegate.qml
qml_tests/common/: tst_DetailsButton.qml  tst_NavigationTabBar.qml  tst_RightClickMenu.qml
qml_tests/components/: tst_FLFocusHighlight.qml  tst_IconButton.qml
src/: counter.cpp  counter.hpp  http2config.hpp  image_cache.cpp  image_cache.h  main.cpp  network_cache.hpp  rom_model.cpp  rom_model.hpp
src/app/: AchievementSetItem.cpp  CMakeLists.txt  (+42 more)
src/app/patching/: CMakeLists.txt  bps_patch.cpp  bps_patch.hpp  ips_patch.cpp  ips_patch.hpp  pm_star_rod_mod_patch.cpp  pm_star_rod_mod_patch.hpp  rom_patch.hpp  ups_patch.cpp  ups_patch.hpp  util.hpp  yay_0_codec.cpp  yay_0_codec.hpp
test_resources/: wellformatted.ips
tests/: main.cpp  qml_main.cpp
(+467 files in other folders)
